v0.0.6
------

 - Added support for blocks for `yield_content` (as default text).
 - `Page#referrer` now is a page (instead of a string of the name).
 - Partials path is now not ignored by default.
 - Add support for page ordering (by the `position` key in metadata).
 - You can now start an IRB session with the `hyde console` command.
 - Implement traversion methods for page: #next, #previous, #siblings,
   and #parent.
 - Implement the 'page' variable to be available in pages.
 - Add Page#title.
 - Add Page#path.
 - Implement Utils#escape_html.

v0.0.5 - 2010-05-30
-------------------

 - Implemented `content_for` and `yield_content` helpers
 - Added `partials_path` config variable
 - Changed helper method `partial`s syntax (from `partial X, :locals => { ... }` to `partial X, ...`)
 - Line numbers for errors are shown now
 - Added rudimentary 404 page
 - Added `hyde_requirement` config variable -- Hyde will now not proceed if the project needs a later version of Hyde
 - Extensions are now auto-guessed (for example, 'foo.less' will be accessible as 'foo.css')

v0.0.4 - 2010-05-25
-------------------

 - First public release