@@ -3,5 +3,10 @@ module Hyde
     def self.get_filename(path, project)
       project.root(:layouts, path)
     end
+
+    def layout
+      # Don't try a default layout.
+      @layout
+    end
   end
 end
