@@ -12,6 +12,8 @@ v0.0.6
  - Add Page#title.
  - Add Page#path.
  - Implement Utils#escape_html.
+ - Hyde now always tries 'layouts/default.*' as the default layout, if none's
+   specified. (TODO: layout: false)
 
 v0.0.5 - 2010-05-30
 -------------------
